# django-privacydates

./: LICENSE  README.md  setup.cfg
.github/workflows/: pytest.yml
privacydates/: __init__.py  admin.py  annihilation.py  apps.py  enumeration.py  fields.py  generalization.py  mixins.py  models.py  order.py  policy.py  precision.py  rough.py  runtests.py  signals.py  tests.py  vanish.py
privacydates/management/commands/: annihilationtask.py  vanishdates.py
privacydates/migrations/: 0001_initial.py  0002_auto_20211026_1114.py
privacydates/templatetags/: enum_utils.py  privacydates_utils.py
sample_project/: README.md  manage.py  tests.py
sample_project/dateTester/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/datumlista/: admin.py  apps.py  models.py  urls.py  views.py
sample_project/datumlista/migrations/: 0001_initial.py
sample_project/datumlista/static/datumlista/: style.css
sample_project/datumlista/templates/datumlista/: base.html  event_list.html
